testsuite/tests/rename/should_compile/GHCINullaryRecordWildcard.script
:set -XRecordWildCards

data Foo = Foo

f Foo {..} = Foo {..}
