testsuite/tests/rename/should_fail/T9815bghci.script
:set -XRecordWildCards

data Arg = Arg () Bool

f x = Arg {..}
